terraform/modules/gitea-repo/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-go-service
  labels:
    app: hello-world-go
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: hello-world-go
